2011-05-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/simi.c: added #include <sys/file.h> for Solaris

2011-05-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/abs.c: optimized
	* src/mcs51/gen.c: replaced strcmp with EQ,
	  implemented --fomit-frame-pointer (except for --xstack),
	  added freeForBranchAsmops & swapOperands
	* src/mcs51/main.c(_mcs51_finaliseOptions): --fomit-frame-pointer
	* src/mcs51/peep.c(scan4op): detect sp manipulations
	* src/SDCCmem.c(printAllocInfoSeg): print stack base
	* support/regression/fwk/lib/spec.mk: cosmetic
	* support/regression/tests/interrupt.c: new, added
	* .version: bumped to 3.0.3

2011-05-20 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c:
	  reverted to ioctl(sock, FIONBIO, &iMode) instead F_SETFL, O_NONBLOCK | O_ASYNC) on Solaris
	* src/SDCCutil.c, src/SDCCsystem.c: fixed warnings on Solaris

2011-05-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c(genPlusIncr, genMinusDec): fixed bug 3304184
	* src/SDCCutil.c: fixed warnings
	* support/regression/tests/bug3304184.c: new, added

2011-05-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/pic16/i2c.h: applied patch 3303565

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3303325.c:
	  Fixed bug #3303325.

2011-05-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/inline.c: disabled failing test for NetBSD

2011-05-15 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c: replace FNONBLOCK and FASYNC with O_NONBLOCK and O_ASYNC

2011-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/rtrack.c: fixed bug 3302328
	* src/port.mk: made ar quiet

2011-05-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/fwk/lib/extern1.c,
	* support/regression/fwk/lib/extern2.c: removed inline for NetBSD builds
	* src/SDCCast.c(decorateType): fixed bug 3117721